--- a/Client/src/Components/Navbar/Navbar.css
+++ b/Client/src/Components/Navbar/Navbar.css
@@ -142,12 +142,13 @@
   }
   .services-submenu {
     top: 72px;
+    
   }
   
 }
 @media screen and (max-width: 960px) {
   .nav-items {
-    border: solid black;
+ 
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -164,7 +165,7 @@
     left: 0px;
     opacity: 1;
     width: 100%;
-    margin-top: 10vh;
+    
     transition: all 0.5s ease-in-out;
     z-index: 1;
     -webkit-transition: all 0.5s ease-in-out;
@@ -227,6 +228,15 @@
     text-align: left;
   }
 }
-@media screen and (max-width: 430px) {
-  
+@media screen and (max-width: 390px) {
+  .services-submenu {
+    width: 100%;
+    position: relative;
+    top: 0;
+    
+   
+  }
+  .nav-item.active{
+    border: solid black;
+  }
 }
