--- a/Client/src/Components/Section2/Section2.css
+++ b/Client/src/Components/Section2/Section2.css
@@ -7,6 +7,7 @@
   height: 572px;
   padding-left:20vh;
   padding-right:20vh ;
+  overflow: hidden;
 }
 
 .sectionContent {
@@ -253,11 +254,12 @@
       flex-direction: column;
       align-items: center;
       height: auto;
+      
   }
 
   .sectionContent {
-    border: solid brown;
-      width: 100%;
+   
+      width: 40vh;
       flex-direction: column;
       align-items: center;
       margin: 0;
@@ -266,27 +268,29 @@
   .imgs {
       position: relative;
       width: 100%;
+      height: 40vh;
       display: flex;
       justify-content: center;
+      margin-bottom: 100px;
   }
 
   .imgs > img {
-      width: 200px;
-      height: 200px;
+      width: 100%;
+      height: 100%;
   }
 
   .circle {
      width: 200px;
      height: 200px;
-     left: 130px;
+     left: -10px;
      position: relative;
      animation: rotate 10s linear infinite;
      -webkit-animation: rotate 10s linear infinite;
 }
 
   .section2text {
-    margin-top: -100px;
-    border: solid black;
+     margin-top: -100px;
+   
       margin-left: 0;
       align-self: center;
       width: 100%;
