--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -7,9 +7,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  
     
   
 }
 #loom-companion-mv3{
   display: none;
+}
+section{
+  overflow: hidden;
+  
 }
