--- a/Client/src/Components/Section2/Section2.css
+++ b/Client/src/Components/Section2/Section2.css
@@ -165,11 +165,12 @@
       flex-direction: column;
       align-items: center;
       height: auto;
+      padding: 40px;
   }
 
   .sectionContent {
       width: 100%;
-      flex-direction: column;
+      
       align-items: center;
   }
 
@@ -188,7 +189,7 @@
   .circle {
       width: 250px;
       height: 250px;
-      left: 80px;
+      left: 10px;
       position: relative;
       animation:rotate 10s linear infinite ;
       -webkit-animation:rotate 10s linear infinite ;
@@ -258,13 +259,8 @@
   }
 
   .sectionContent {
-<<<<<<< HEAD
-   
       width: 40vh;
-=======
-    
       width: 100%;
->>>>>>> 3306361f53b695f72a6d1364f32263b7bf70d214
       flex-direction: column;
       align-items: center;
       margin: 0;
@@ -352,7 +348,144 @@
     
   }
 }
+@media (max-width: 480px) {
+  .section2 {
+      flex-direction: column;
+      align-items: center;
+      height: auto;
+      
+  }
 
+  .sectionContent {
+
+   
+      width: 40vh;
+
+      width: 100%;
+
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+  }
+
+  .imgs {
+      position: relative;
+      width: 100%;
+      height: 40vh;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 100px;
+  }
+
+  .imgs > img {
+      width: 100%;
+      height: 100%;
+  }
+
+  .circle {
+     width: 200px;
+     height: 200px;
+     left: -10px;
+     position: relative;
+     animation: rotate 10s linear infinite;
+     -webkit-animation: rotate 10s linear infinite;
+}
+
+  .section2text {
+     margin-top: -100px;
+   
+      margin-left: 0;
+      align-self: center;
+      width: 100%;
+      text-align: center;
+  }
+
+  .section2text > h2 {
+      font-size: 24px;
+      text-align: center;
+  }
+
+  .section2text > p {
+      font-size: 14px;
+      text-align: center;
+      padding-left: 3px;
+      padding-right: 3px;
+     
+  }
+
+  .section2text > ol {
+      font-size: 14px;
+      text-align: center;
+  }
+
+  .section2text > ol > li {
+      font-size: 16px;
+      text-align: center;
+      list-style-type: none;
+  }
+  .section2text>.herobutton>div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+   
+    width: auto;
+   gap: 5px;
+   
+  }
+  .section2text>.herobutton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+   
+  }
+  .section2text>.herobutton>div>.herobtntext>p{
+    font-size:10px;
+    width: 100px;
+  }
+  .section2text>.herobutton>div>.herobtnicon{
+    font-size:30px;
+    
+    
+  }
+}
+@media (max-width: 431px){
+  .section2{
+    padding: 10px;
+  }
+  .section2>.sectionContent{
+    width: 100%;
+  }
+  .circle{
+    left: -30px;
+  }
+} 
+@media (max-width: 391px){
+  .section2{
+    padding: 10px;
+  }
+  .section2>.sectionContent{
+    width: 100%;
+  }
+  .circle{
+    left: -30px;
+  }
+} 
+@media (max-width: 360px) {
+  .circle{
+    left: 60px;
+  }
+  .section2{
+    padding: 0;
+    margin: 0;
+  }
+  .section2>.sectionContent{
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+  }
+}
 @media (max-width: 360px) {
   .circle{
     left: 60px;
